# snek

./: .gitignore  README.md  pyproject.toml
snek_inspyred/: __init__.py  main.py
snek_inspyred/conf/: appearence.conf  audio_conf.py  errors.py
snek_inspyred/game/: __init__.py
snek_inspyred/game/audio/: __init__.py
snek_inspyred/game/audio/conf/: __init__.py
snek_inspyred/game/audio/conf/conf_files/: audio.ini  sound_set.ini  sounds.lib
snek_inspyred/game/models/: __init__.py
snek_inspyred/helpers/: __init__.py
